methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if(estSurBiscuit()){
  ^MethodsReturning:14: error: Boolean does not take parameters
        if (vuBiscuit()){
                     ^